@@ -62,7 +62,7 @@ void closeLog(s_log *htick_log);
   FZ:     closes the logFile and frees all mem use by log.
 */
 
-void writeLogEntry(s_log *htick_log, char key, char *logString);
+void writeLogEntry(s_log *htick_log, char key, char *logString, ...);
 /*DOC
   Input:  log is a pointer to a s_log
           key is the key under which the log-entry will be stored
